product_docs/docs/migration_toolkit/53.0.0/index.mdx
---
title: "Migration Toolkit"
---

<div id="index" class="registered_link"></div>


EDB Postgres Migration Toolkit (Migration Toolkit) is a powerful command-line tool that offers granular control of the migration process. Migration Toolkit facilitates migration of database objects and data to an EDB Postgres Advanced Server (Advanced Server) or PostgreSQL database from:

-   Oracle
-   MySQL
-   Microsoft SQL Server

You can also use Migration Toolkit to migrate database objects and data from Sybase Adaptive Server Enterprise to Advanced Server, or between Advanced Server and PostgreSQL.

You can install Migration Toolkit with the Advanced Server installer, or via Stack Builder. Stack Builder is distributed with both the Advanced Server and the PostgreSQL one-click installer available from the EnterpriseDB web site at:

<https://www.enterprisedb.com/advanced-downloads>

This guide provides a high-level description of the steps involved in the migration process, as well as installation and usage instructions for Migration Toolkit. It also includes solutions to common migration problems, and details unsupported features and their potential workarounds.

**Please Note:**

This guide uses the term Postgres to refer to *either* an installation of Advanced Server or PostgreSQL.

This guide uses the term Stack Builder to refer to *either* StackBuilder Plus (distributed with Advanced Server) or Stack Builder (distributed with the PostgreSQL one-click installer from EnterpriseDB).

<div class="toctree" maxdepth="3">

whats\_new supported\_versions migration\_methodology functionality\_overview installing\_mtk building\_toolkit.properties\_file invoking\_mtk mtk\_command\_options mtk\_errors error\_codes unsupported\_features

</div>
