product_docs/docs/migration_toolkit/54.0.0/index.mdx
---
title: "Migration Toolkit™"
directoryDefaults:
  description: "EDB Postgres Migration Toolkit Version 54.0.0 Documentation and release notes. EDB postgres Migration ToolKit helps migrate data from oracle or any other database to PostgreSQL or EDB Postgres Advanced server."

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-postgres-migration-toolkit/user-guides/user-guide/54.0.0/index.html"
  - "/edb-docs/d/edb-postgres-migration-toolkit/user-guides/user-guide/latest/index.html"
  - "/edb-docs/d/edb-postgres-migration-toolkit/user-guides/user-guide/54.0.0/conclusion.html"
  - "/edb-docs/d/edb-postgres-migration-toolkit/user-guides/user-guide/latest/conclusion.html"
  - "/edb-docs/d/edb-postgres-migration-toolkit/user-guides/user-guide/54.0.0/whats_new.html"
  - "/edb-docs/d/edb-postgres-migration-toolkit/user-guides/user-guide/latest/whats_new.html"
  - "/edb-docs/d/edb-postgres-migration-toolkit/user-guides/user-guide/54.0.0/genindex.html"
  - "/edb-docs/d/edb-postgres-migration-toolkit/user-guides/user-guide/latest/genindex.html"
  - "/edb-docs/p/edb-postgres-migration-toolkit/54.0.0"
  - "/edb-docs/p/edb-postgres-migration-toolkit/latest"
---

<div id="index" class="registered_link"></div>

Migration Toolkit is a powerful command-line tool that offers granular control of the migration process. Migration Toolkit facilitates migration of database objects and data to an EDB Postgres Advanced Server or PostgreSQL database from:

-   Oracle®
-   MySQL™
-   Microsoft® SQL Server®

You can also use Migration Toolkit to migrate database objects and data from Sybase® Adaptive Server® Enterprise to EDB Postgres Advanced Server, or between EDB Postgres Advanced Server and PostgreSQL.

You can install Migration Toolkit with the EDB Postgres Advanced Server installer, or via Stack Builder. Stack Builder is distributed with both the EDB Postgres Advanced Server and the PostgreSQL one-click installer available from the EnterpriseDB web site at:

<https://www.enterprisedb.com/advanced-downloads>

This guide provides a high-level description of the steps involved in the migration process, as well as installation and usage instructions for Migration Toolkit. It also includes solutions to common migration problems, and details unsupported features and their potential workarounds.

!!! Note
    This guide uses the term Postgres to refer to *either* an installation of EDB Postgres Advanced Server or PostgreSQL.

This guide uses the term Stack Builder to refer to *either* StackBuilder Plus (distributed with EDB Postgres Advanced Server) or Stack Builder (distributed with the PostgreSQL one-click installer from EnterpriseDB).

In addition, if you are using the pdf version of this document, using cut/paste to copy command may result in extra spaces or carriage returns in the pasted command. If a command fails, check the command carefully for additional characters.

<div class="toctree" maxdepth="3">

whats_new supported_operating_systems_and_database_versions migration_methodology functionality_overview installing_mtk building_toolkit.properties_file invoking_mtk mtk_command_options mtk_errors error_codes unsupported_features conclusion

</div>
